<resources>
    <string name="app_name">VGS Sample</string>
    <string name="sample_1">PII Data</string>
    <string name="sample_2">Credit Card Data</string>
    <string name="sample_3">Bank Account Data</string>

    <string name="vgs_proxy_url">https://tntd4qvjtaj.SANDBOX.verygoodproxy.com/</string>

    <string name="name">Name</string>
    <string name="ssn">Social Security Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="cc">Credit Card Number</string>
    <string name="cvv">CVV</string>
    <string name="bank_account">Bank Account Number</string>
    <string name="submit">Submit</string>
    <string name="redacted_data">Redacted Data:</string>

    <string name="piiName">Name:\n%1$s</string>
    <string name="piiDob">Date Of Birth:\n%1$s</string>
    <string name="piiSsn">Social Security Number:\n%1$s</string>
    <string name="piiCc">Credit Card Number:\n%1$s</string>

    <string name="bankName">Name:\n%1$s</string>
    <string name="bankAccount">Bank Account:\n%1$s</string>
    <string name="bankSsn">Social Security Number:\n%1$s</string>

    <string name="cardName">Name:\n%1$s</string>
    <string name="cardCc">Credit Card Number:\n%1$s</string>
    <string name="cardCvv">CVV:\n%1$s</string>
</resources>
