<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DataSendActivity">

    <EditText
        android:id="@+id/editCardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editCardCc"/>

    <EditText
        android:id="@+id/editCardCc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:digits="0123456789 _"
        android:hint="@string/cc"
        android:layout_margin="8dp"
        android:maxLength="19"
        app:layout_constraintBottom_toTopOf="@id/editCardCvv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editCardName"/>


    <EditText
        android:id="@+id/editCardCvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/cvv"
        android:layout_margin="8dp"
        android:maxLength="3"
        app:layout_constraintBottom_toTopOf="@id/btnCardSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editCardCc"/>

    <Button
        android:id="@+id/btnCardSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editCardCvv"/>

</android.support.constraint.ConstraintLayout>