<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DataSendActivity">

    <EditText
        android:id="@+id/editPiiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editPiiDob"/>

    <EditText
        android:id="@+id/editPiiDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/dob"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/editPiiSsn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editPiiName"/>

    <EditText
        android:id="@+id/editPiiSsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/ssn"
        android:layout_margin="8dp"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@id/editPiiCc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editPiiDob"/>

    <EditText
        android:id="@+id/editPiiCc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:digits="0123456789 _"
        android:hint="@string/cc"
        android:layout_margin="8dp"
        android:maxLength="19"
        app:layout_constraintBottom_toTopOf="@id/btnPiiSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editPiiSsn"/>

    <Button
        android:id="@+id/btnPiiSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPiiRedactedData"
        app:layout_constraintBottom_toBottomOf="@id/editPiiCc" />

    <TextView
        android:id="@+id/textPiiRedactedData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPiiName"
        app:layout_constraintBottom_toBottomOf="@id/btnPiiSubmit"/>

    <TextView
        android:id="@+id/textPiiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPiiDob"
        app:layout_constraintBottom_toBottomOf="@id/textPiiRedactedData" />

    <TextView
        android:id="@+id/textPiiDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPiiSsn"
        app:layout_constraintBottom_toBottomOf="@id/textPiiName" />

    <TextView
        android:id="@+id/textPiiSsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPiiCc"
        app:layout_constraintBottom_toBottomOf="@id/textPiiDob"/>

    <TextView
        android:id="@+id/textPiiCc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textPiiSsn"/>

</android.support.constraint.ConstraintLayout>