<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DataSendActivity">

    <EditText
        android:id="@+id/editBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:hint="@string/name"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editBankAccount"/>

    <EditText
        android:id="@+id/editBankAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/bank_account"
        android:layout_margin="8dp"
        android:maxLength="50"
        app:layout_constraintBottom_toTopOf="@id/editBankSsn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editBankName"/>

    <EditText
        android:id="@+id/editBankSsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/ssn"
        android:layout_margin="8dp"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@id/btnBankSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editBankAccount"/>

    <Button
        android:id="@+id/btnBankSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBankRedactedData"
        app:layout_constraintBottom_toBottomOf="@id/editBankSsn"/>

    <TextView
        android:id="@+id/textBankRedactedData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBankName"
        app:layout_constraintBottom_toBottomOf="@id/btnBankSubmit"/>

    <TextView
        android:id="@+id/textBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBankAccount"
        app:layout_constraintBottom_toBottomOf="@id/textBankRedactedData" />

    <TextView
        android:id="@+id/textBankAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBankSsn"
        app:layout_constraintBottom_toBottomOf="@id/textBankName"/>


    <TextView
        android:id="@+id/textBankSsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textBankAccount"/>

</android.support.constraint.ConstraintLayout>